--- a/css/styles.css
+++ b/css/styles.css
@@ -4,15 +4,18 @@
     box-sizing: border-box;
 }
 
-
-
-
-
-
-
 /* section1 styles */
+
+
+
+
+/* section2 styles */
 body{
     font-family: serif sans-serif helvetica;
+}
+.container{
+    width: 95%;
+    margin: 0 auto;
 }
 .head-sec1{
     display: flex;
@@ -50,7 +53,12 @@ body{
 .palace-sec1{
     display: flex;
     justify-content: space-between;
+    gap: 1em;
     background-color:beige;
+}
+
+.palace-sec1 div {
+    flex: 1;
 }
 .palace-sec1 ul{
     display: flex;
@@ -61,12 +69,41 @@ body{
 }
 .palace-list{
     background-color: lightgrey;
-    width: 20%;
+    
+}
+
+.team-info {
+    display: block;
+    color: red;
+    cursor: pointer;
 }
 .partip{
     font-size: larger;
     font-weight: bolder;
     width: 70%;
+    margin: .5em;
+}
+.treasure{
+    flex-direction: column;
+}
+.teams-sec1{
+    align-items: center;
+}
+.btn2{
+padding: .5em;
+font-size: larger;
+border: none;
+border-radius: 3%;
+margin-left: 2em;
+background-color:grey;
+color: beige;
+cursor: pointer;
+}
+
+.team-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin: .5em;
 }
 
@@ -80,10 +117,5 @@ body{
 
 
 
-
-
-
-
-/* section2 styles */
 
 /* section3 syles */
