changed background color and headin

--- a/css/styles.css
+++ b/css/styles.css
@@ -222,7 +222,7 @@
     .head-sec1{
         display: flex;
         align-items: center;
-        background-color: green;
+        background-color:#F2F2F2;
         justify-content: space-between;
     }
     .paragraph-sec1{
@@ -260,7 +260,7 @@
         margin: 0.4em 0;
         font-size:xx-large;
         font-weight: bolder;
-        color: wheat;
+        color:indianred;
     }
     .palace-sec1{
         display: flex;
@@ -281,7 +281,7 @@
     }
     .palace-list{
         background-color: lightgrey;
-        
+        text-align: center;
     }
     
     .team-info {
@@ -289,6 +289,7 @@
         color: red;
         cursor: pointer;
         text-align: center;
+        
     }
     .partip{
         font-size: larger;
@@ -345,6 +346,10 @@
      }
      .team-info{
          flex-direction: column;
+         align-items: center;
+     }
+     .palace-list{
+         align-items: center;
      }
     }
     
