color change in footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
     
     }
     .dark-bg{
-    background-color: black;
+    background-color: #16202C;
     color: white;
     }
     
@@ -39,11 +39,14 @@
     font-size: 2rem;
     padding-top: 3em;
     }
+    .information p{
+        text-align: center;
+    }
     .color{
-    color:lime;
+color: #2F881D;
     }
     .miner{
-    color: lime;
+    color: #2F881D;
     }
     
     .paragraph{
@@ -70,10 +73,11 @@
     }
     .btn{
     padding: 1em 4em;
-    background-color: green;
+    background-color: #2F881D;
     color: white;
     border-radius: 5px;
     border: none;
+    font-size: 1.4rem;
     }
     .button{
     padding: 1em 4em;
@@ -82,6 +86,7 @@
     margin-left: 1.5em;
     border-radius: 5px;
     border: none;
+    font-size: 1.4rem;
     
     }
     .btn:hover{
@@ -198,7 +203,7 @@
     padding: 2em;
     }
     .btn{
-    background-color: lawngreen;
+    background-color: #2F881D;
     /* cursor: pointer; */
     padding: 1em 1.5em;
     border-radius: 0.5em;
